# lv_port_win_vscode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_cn.md  lv_sim_vscode_sdl.code-workspace
lib/config/: lv_conf.h  lv_drv_conf.h
lib/lv_drivers/: win_drv.h
lib/lv_drivers/display/: GC9A01.h  ILI9341.h  R61581.h  SHARP_MIP.h  SSD1963.h  ST7565.h  UC1610.h  drm.h  fbdev.h  monitor.h
lib/lv_drivers/gtkdrv/: gtkdrv.h
lib/lv_drivers/indev/: AD_touch.h  FT5406EE8.h  XPT2046.h  evdev.h  keyboard.h  libinput_drv.h  mouse.h  mousewheel.h
lib/lv_drivers/wayland/: wayland.h
lib/lv_drivers/win32drv/: win32drv.h
lib/ui/: ui.c  ui.h  ui_comp.c  ui_comp.h  ui_helpers.c  ui_helpers.h
main/src/: main.c  mouse_cursor_icon.c
storage/lvgl/examples/libs/gif/: lv_example_gif_1.c
